<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spacex.fragment.StartListFragment"
    tools:ignore="RtlSymmetry">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/years_container_text"
        android:text="@string/years_container_text"
        style="@style/header"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/years_container_text"
        android:id="@+id/years_scroll"
        >
        <LinearLayout
            android:id="@+id/years_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            />
    </ScrollView>

    <LinearLayout
        android:id="@+id/database_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/years_scroll"
        android:layout_marginStart="8dp"
        >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taken_from_database"
                android:id="@+id/taken_from_database"
                style="@style/header"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/taken_from_database_value"
                style="@style/header"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/basic_padding"
            android:layout_below="@id/database_status"
            android:id="@+id/data_updated_container"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_updated"
                android:id="@+id/data_updated"
                style="@style/header_long_text"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/data_updated_time"
                style="@style/header_long_text"
                android:paddingStart="@dimen/basic_padding"
                />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_below="@id/data_updated_container"
    />

</RelativeLayout>
